# notes-solid

./: .editorconfig  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  ListBox.tsx  NotesPane.tsx  SettingsButton.tsx  index.tsx  quill.css  state.ts  style.css  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  main.rs
src/lib/: localStorage.ts  persistence.ts
src/lib/components/: DirectoryButton.tsx  FaIcon.tsx  LoadingSpinner.module.css  LoadingSpinner.tsx  util.ts
src/lib/components/editor/: Editor.css  Editor.module.scss  Editor.tsx  EditorTitle.module.css  EditorTitle.tsx  EditorToolbar.module.scss  EditorToolbar.tsx  Prosemirror.module.scss  inputrules.ts  keymap.ts  schema-list.ts  schema.ts
src/lib/components/notelist/: NoteList.tsx  context.tsx
src/lib/components/treeview/: TreeView.css  TreeView.module.scss  TreeView.tsx  treeContext.tsx
src/lib/skeleton/components/: AppBar.tsx  AppShell.tsx  IconButton.module.css  IconButton.tsx  Select.tsx
src/lib/skeleton/styles/: core.css
src/lib/skeleton/utlities/: LightSwitch.tsx
src/lib/skeleton/utlities/Modal/: Modal.tsx  context.tsx
src/skeleton/components/: AppShell.tsx
